# platt-bot

./: .gitignore  CLAUDE.md
corpus/: sample_input.jsonl
corpus_builder/: __init__.py  __main__.py  pipeline.py  pyproject.toml
corpus_builder/sources/: opensubtitles.py  tatoeba.py
platt_translator/: .env.example  DIALECT_RULES.md  SYSTEM_PROMPT.md  VALIDATOR_PROMPT.md  __init__.py  __main__.py  chains.py  pipeline.py  pyproject.toml
platt_translator/platt_translator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
training/: README.md  app.py  platt_chat_train.jsonl  platt_finetune.ipynb  prepare_dataset.py  requirements.txt
